--- a/main.html
+++ b/main.html
@@ -6,7 +6,8 @@
     <title>Humming Bird</title>
 </head>
 <body>
-    
+    <input type="text" class="js-search-item">
+    <button class="js-search">search</button>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/main.js" type="module"></script>
 </body>
