feat: implement movie search functionality and display results in the UI

--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 <body>
     <input type="text" class="js-search-item">
     <button class="js-search">search</button>
+
+    <section class="js-movies"></section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/main.js" type="module"></script>
 </body>
