feat: add trending movies section and implement movie details page

--- a/main.html
+++ b/main.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Humming Bird</title>
 </head>
-<body>
+<body style="background-color: darkblue;">
     <input type="text" class="js-search-item">
     <button class="js-search">search</button>
 
-    <section class="js-movies"></section>
+    <section class="js-movies">
+        <section class="trending-movies js-trending-movies">
+            <a href="movie.html"></a>
+        </section>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/main.js" type="module"></script>
 </body>
