--- a/movie.html
+++ b/movie.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 <body>
-    
+    <section class="js-movie-details"></section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/movie.js" type="module"></script>
 </body>
