style: stylised the trending movies section  for better display

--- a/main.html
+++ b/main.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Humming Bird</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body style="background-color: darkblue;">
     <input type="text" class="js-search-item">
     <button class="js-search">search</button>
 
     <section class="js-movies">
+           <h1>Trending Movies</h1>
         <section class="trending-movies js-trending-movies">
-           
         </section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
