--- a/main.html
+++ b/main.html
@@ -11,8 +11,11 @@
     <button class="js-search">search</button>
 
     <section class="js-movies">
-           <h1>Trending Movies</h1>
-        <section class="trending-movies js-trending-movies">
+        <h1>Trending Movies</h1>
+        <section class="trending-movies js-trending-movies"></section>
+
+        <h1>Popular movies</h1>
+        <section class="popular-movies js-popular-movies">
         </section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
