--- a/main.html
+++ b/main.html
@@ -15,8 +15,10 @@
         <section class="trending-movies js-trending-movies"></section>
 
         <h1>Popular movies</h1>
-        <section class="popular-movies js-popular-movies">
-        </section>
+        <section class="popular-movies js-popular-movies"></section>
+
+        <h1>Now Playing</h1>
+        <section class="now-playing js-now-playing"></section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/main.js" type="module"></script>
