feat: add upcoming movies section with fetching and displaying functionality refactor: cleaned up code in the style file

--- a/main.html
+++ b/main.html
@@ -19,6 +19,9 @@
 
         <h1>Now Playing</h1>
         <section class="now-playing js-now-playing"></section>
+
+        <h1>Upcoming movies</h1>
+        <section class="upcoming-movies js-upcoming-movies"></section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/main.js" type="module"></script>
