--- a/main.html
+++ b/main.html
@@ -24,6 +24,6 @@
         <section class="upcoming-movies js-upcoming-movies"></section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="scripts/main.js" type="module"></script>
+    <script src="scripts/movie-pages/main.js" type="module"></script>
 </body>
 </html>
