feat: update movie search results to display on search page

--- a/movie-details-page.html
+++ b/movie-details-page.html
@@ -8,6 +8,6 @@
 <body>
     <section class="js-movie-details"></section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="scripts/movie.js" type="module"></script>
+    <script src="scripts/movie-pages/movie.js" type="module"></script>
 </body>
 </html>
