--- a/search-page.html
+++ b/search-page.html
@@ -11,9 +11,10 @@
 
     <section class="js-movies">
         <h1>Search Results</h1>
-        <section class="movie-search-results js-movie-search-results"></section>
+        <section class="movie-results js-movie-results"></section>
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/movie-pages/search-page.js" type="module"></script>
 </body>
 </html>
