--- a/movie-details-page.html
+++ b/movie-details-page.html
@@ -6,6 +6,8 @@
     <title></title>
 </head>
 <body>
+    <input type="text" class="js-search-item">
+    <button class="js-search">search</button>
     <section class="js-movie-details"></section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/movie-pages/movie.js" type="module"></script>
