--- a/search-page.html
+++ b/search-page.html
@@ -14,6 +14,12 @@
         <section class="movie-results js-movie-results"></section>
     </section>
 
+    <div id="pagination">
+        <button id="prev">Previous</button>
+        <span id="page-number">1</span>
+        <button id="next">Next</button>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/movie-pages/search-page.js" type="module"></script>
 </body>
