feat: create now playing page and implement pagination for movie results refactor: move axios instance to utils directory and update import paths fix: update links in main.html for trending and now playing sections

--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
     <button class="js-search">search</button>
 
     <section class="js-movies">
-        <h1>Trending Movies</h1>
+        <h1><a href="trending-movies-page.html">Trending Movies</a></h1>
         <section class="trending-movies js-trending-movies"></section>
 
         <h1>Popular movies</h1>
         <section class="popular-movies js-popular-movies"></section>
 
-        <h1>Now Playing</h1>
+        <h1><a href="now-playing-page.html">Now Playing</a></h1>
         <section class="now-playing js-now-playing"></section>
 
         <h1>Upcoming movies</h1>
