feat: add popular and upcoming movies pages with pagination

--- a/main.html
+++ b/main.html
@@ -14,13 +14,13 @@
         <h1><a href="trending-movies-page.html">Trending Movies</a></h1>
         <section class="trending-movies js-trending-movies"></section>
 
-        <h1>Popular movies</h1>
+        <h1><a href="popular-movies-page.html">Popular Movies</a></h1>
         <section class="popular-movies js-popular-movies"></section>
 
         <h1><a href="now-playing-page.html">Now Playing</a></h1>
         <section class="now-playing js-now-playing"></section>
 
-        <h1>Upcoming movies</h1>
+        <h1><a href="upcoming-movies-page.html">Upcoming Movies</a></h1>
         <section class="upcoming-movies js-upcoming-movies"></section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
